--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
@@ -152,10 +152,11 @@
             android:background="@null"
             android:drawablePadding="4dp"
             android:hint="@string/hint_edt_phone"
-            android:inputType="phone"
+            android:inputType="phone|number"
             android:maxLines="1"
             android:gravity="start"
             android:padding="2dp"
+            android:textAlignment="viewStart"
             android:textColor="@color/text_color_splash"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/backgroundPhone"
