--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
@@ -16,24 +16,23 @@
 
         <RelativeLayout
             android:id="@+id/relativeLayoutSelectPicture"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:gravity="center_horizontal">
+            >
 
             <TextView
                 android:id="@+id/docType"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_marginStart="26dp"
                 android:text="@string/Document_type"
                 android:tag="@string/dont_touch_me"
                 android:textColor="@color/textColor"
+                android:layout_alignParentStart="true"
                 android:textSize="18sp"
                 android:layout_marginEnd="15dp"
-                android:layout_toStartOf="@+id/imageViewUploadDoc"
-            />
+                />
 
 
             <TextView
@@ -92,6 +91,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="10dp"
+                android:visibility="visible"
                 android:src="@drawable/ic_addimage"/>
 
         </RelativeLayout>
