--- a/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
@@ -65,7 +65,7 @@
     <!--Profile Screen-->
     <integer name="show_bank_details_in_profile">@integer/view_visible</integer>
     <integer name="show_t_and_c_profile">@integer/view_visible</integer>
-
+    <bool name="specified_country_search_result_enabled">true</bool>
 
 
     <!--General Features Enable/Disable-->
