--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
@@ -117,7 +117,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginBottom="12dp"
         android:layout_marginTop="12dp"
         android:visibility="visible"
         >
@@ -173,36 +172,6 @@
             android:src="@drawable/orange_cross"
             android:tag="mwar"
             android:visibility="visible"/>
-
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/addImageLayout"
-            android:layout_marginStart="26dp"
-            android:layout_marginTop="5dp">
-
-            <TextView
-                android:id="@+id/docStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="@string/uploaded"
-                android:textColor="@color/themeColor"
-                android:textSize="13sp"/>
-
-            <ImageView
-                android:id="@+id/imageViewDocStatusImage"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="4dp"
-                android:layout_toEndOf="@+id/docStatus"
-                android:src="@drawable/orange_cross"
-                android:tag="mwar"
-                android:visibility="visible"/>
-
-        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/addImageLayout2"
@@ -263,6 +232,36 @@
             android:layout_marginEnd="30dp"
             android:src="@drawable/doc_uploaded"/>
 
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rlDocumentStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="26dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginTop="5dp">
+
+        <TextView
+            android:id="@+id/docStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="@string/uploaded"
+            android:textColor="@color/themeColor"
+            android:textSize="13sp"/>
+
+        <ImageView
+            android:id="@+id/imageViewDocStatusImage"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="4dp"
+            android:layout_toEndOf="@+id/docStatus"
+            android:src="@drawable/orange_cross"
+            android:tag="mwar"
+            android:visibility="visible"/>
 
     </RelativeLayout>
 
