--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
@@ -61,7 +61,7 @@
             android:hint="@string/last_name"
             android:textDirection="locale"
             android:imeOptions="actionDone"
-            android:inputType="textPersonName"
+            android:inputType="textPersonName|textCapWords"
             android:padding="13dp"
             android:textColor="@color/textColor"
             android:textColorHint="@color/textColorLight"
