--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_upload_document.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_upload_document.xml
@@ -1,139 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/addImage"
-             xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="720px"
-             android:layout_height="1134px"
-             android:orientation="vertical"
-             android:background="@color/black_translucent"
-             android:splitMotionEvents="false"
+<RelativeLayout
+    android:id="@+id/relative"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     >
 
     <RelativeLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="30px"
-        android:background="@drawable/dialog_background_color"
-        android:splitMotionEvents="false"
         android:layout_centerInParent="true"
+        android:layout_margin="25dp"
+        android:background="@drawable/dialog_background_color"
+        android:clickable="true"
+        android:focusable="true"
         >
 
-
-        <LinearLayout
-            android:id="@+id/rl1"
-            android:layout_width="fill_parent"
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10px"
-            android:splitMotionEvents="false"
+            android:layout_centerHorizontal="true"
+            android:text="@string/choose_image_from"
+            style="@style/TextLarge"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
 
-            >
-
-            <TextView
-                android:id="@+id/textHead"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="20px"
-                android:layout_marginTop="20px"
-                android:paddingStart="20px"
-                android:paddingEnd="20px"
-                android:text="@string/upload"
-                android:textColor="@color/black"
-                android:textSize="40px"
-                android:visibility="visible"
-
-                />
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="2px"
-                android:layout_gravity="bottom"
-                android:background="@color/themeColor"/>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="52px"
-                android:layout_marginBottom="52px"
-                android:layout_gravity="center"
-                android:orientation="horizontal"
-                >
-
-                <LinearLayout
-                    android:id="@+id/LAyoutGallery"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginRight="140px">
-
-                    <ImageView
-                        android:id="@+id/image_gallery"
-                        android:layout_width="80px"
-                        android:layout_height="80px"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="24px"
-                        android:background="@drawable/doc_gallery"/>
-
-                    <TextView
-                        android:id="@+id/image_gallery_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/image_gallery"
-                        android:layout_marginBottom="20px"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="10px"
-                        android:text="@string/gallery"
-                        android:textColor="@color/grey_dark_more"
-                        android:textSize="20px"
-                        android:visibility="visible"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/LayoutCamera"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="228px"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/image_camera"
-                        android:layout_width="87px"
-                        android:layout_height="80px"
-                        android:layout_marginTop="24px"
-                        android:layout_toEndOf="@+id/image_gallery"
-                        android:background="@drawable/doc_camera"/>
-
-                    <TextView
-                        android:id="@+id/image_camera_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/image_camera"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginBottom="20px"
-                        android:layout_marginTop="10px"
-                        android:layout_toEndOf="@+id/image_gallery"
-                        android:text="@string/camera"
-                        android:textColor="@color/grey_dark_more"
-                        android:textSize="20px"
-                        android:visibility="visible"/>
-                </LinearLayout>
-
-            </LinearLayout>
+            />
 
 
-            <Button
-                android:id="@+id/btnCancel"
-                android:text="@string/cancel"
-                style="@style/DialogButton"
-                android:layout_marginBottom="7dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="15dp"
-                />
+        <TextView
+            android:id="@+id/tvGallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/gallery"
+            style="@style/TextLarge"
+            android:layout_below="@+id/tvTitle"
+            android:drawableTop="@drawable/ic_gallery"
+            android:background="?attr/selectableItemBackground"
+            android:theme="@style/GreyHighlight"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="40dp"
+            android:layout_marginBottom="20dp"
+            android:padding="5dp"
+            />
 
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tvCamera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/camera"
+            style="@style/TextLarge"
+            android:layout_below="@+id/tvTitle"
+            android:drawableTop="@drawable/ic_camera"
+            android:background="?attr/selectableItemBackground"
+            android:theme="@style/GreyHighlight"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="20dp"
+            android:padding="5dp"
+            />
+
     </RelativeLayout>
 
 </RelativeLayout>
