--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/document_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/document_details.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+            android:paddingBottom="10dp"
     >
 
 
     <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/parentView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
