--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_tasks.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_tasks.xml
@@ -13,20 +13,21 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/background_white_top_rounded_bordered"
-        app:layout_constraintBottom_toTopOf="@+id/ivSeparator"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/background_white_rounded_bordered"/>
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/ivTasksImage"
         android:layout_width="60dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:src="@drawable/ic_driver_tasks"
         app:layout_constraintStart_toStartOf="@id/viewMain"
         app:layout_constraintEnd_toEndOf="@id/viewMain"
-        app:layout_constraintTop_toTopOf="@id/viewMain"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_height="60dp" />
 
     <android.support.v7.widget.AppCompatTextView
@@ -35,7 +36,6 @@
         app:layout_constraintStart_toStartOf="@id/viewMain"
         app:layout_constraintEnd_toEndOf="@id/viewMain"
         app:layout_constraintTop_toBottomOf="@id/ivTasksImage"
-        app:layout_constraintBottom_toTopOf="@+id/tvValidTill"
         android:layout_marginTop="16dp"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="20dp"
@@ -52,23 +52,22 @@
         app:layout_constraintStart_toStartOf="@id/viewMain"
         app:layout_constraintEnd_toEndOf="@id/viewMain"
         app:layout_constraintTop_toBottomOf="@id/tvBrandingOffer"
-        app:layout_constraintBottom_toBottomOf="@id/viewMain"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:gravity="center_horizontal"
         tools:text="Valid till 29-06-2019"
         android:textColor="@color/grey_dark"
         android:textSize="12sp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="25dp"
         android:layout_height="wrap_content" />
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/ivSeparator"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/viewMain"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="0dp"
         android:layout_height="8dp"
         android:background="@color/chat_background" />
