--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_lb_entry.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_lb_entry.xml
@@ -11,13 +11,12 @@
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/textViewRank"
-            android:layout_width="60px"
-            android:layout_height="60px"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:background="@drawable/circle_grey_new"
             android:gravity="center"
             android:layout_centerInParent="true"
-            android:tag="mwar"
             android:text="1"
             android:textColor="@color/grey_dark"
             android:textSize="@dimen/share_lb_text_size_medium"
