--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_bid_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_bid_request.xml
@@ -115,9 +115,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/bidValues"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"/>
 
-    </android.support.v7.widget.RecyclerView>
 
     <TextView
         android:id="@+id/tvSkip"
