--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_requests.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_requests.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relative"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -90,6 +90,7 @@
         android:layout_width="30dp"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
+        android:visibility="gone"
         android:background="#ff5b29">
 
     <ImageView
@@ -98,4 +99,9 @@
         android:layout_centerInParent="true"
         android:src="@drawable/ic_left_swipe_arrow" />
     </RelativeLayout>
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/ivFaded"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#70ffffff"/>
+</FrameLayout>
