--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_requests.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_requests.xml
@@ -30,27 +30,67 @@
             android:text=""
             android:textSize="10sp" />
 
-        <TextView
-            android:id="@+id/tvPickup"
+        <LinearLayout
+            android:id="@+id/llPickup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="13dp"
-            android:ellipsize="end"
+            android:layout_marginTop="5dp"
+            android:layout_toEndOf="@+id/ivImage">
+
+            <ImageView
+                android:id="@+id/ivPickup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/ic_pickup" />
+
+            <TextView
+                android:id="@+id/tvPickup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:ellipsize="end"
+                android:text="fnklnf"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/ivDotted"
+            android:layout_width="wrap_content"
+            android:layout_height="5dp"
+            android:layout_below="@+id/llPickup"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
             android:layout_toEndOf="@+id/ivImage"
-            android:text=""
-            android:textSize="16sp" />
+            android:background="@drawable/ic_dotted_path"
+            android:minHeight="10dp" />
 
-        <TextView
-            android:id="@+id/tvDrop"
+        <LinearLayout
+            android:id="@+id/llDrop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvPickup"
+            android:layout_below="@+id/ivDotted"
             android:layout_marginStart="13dp"
-            android:layout_toEndOf="@+id/ivImage"
-            android:ellipsize="end"
-            android:text=""
-            android:textSize="16sp" />
+            android:layout_toEndOf="@+id/ivImage">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/ic_drop" />
+
+            <TextView
+                android:id="@+id/tvDrop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:ellipsize="end"
+                android:text="bjkfbewbjke"
+                android:textSize="16sp" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tvTime"
@@ -65,7 +105,7 @@
             android:id="@+id/tvDistance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvDrop"
+            android:layout_below="@+id/llDrop"
             android:layout_marginStart="6dp"
             android:layout_marginTop="16dp"
             android:layout_toEndOf="@+id/tvPrice"
@@ -76,7 +116,7 @@
             android:id="@+id/tvPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvDrop"
+            android:layout_below="@+id/llDrop"
             android:layout_marginStart="10dp"
             android:layout_marginTop="14dp"
             android:layout_toEndOf="@+id/ivImage"
@@ -85,23 +125,25 @@
             android:textSize="16sp" />
 
     </RelativeLayout>
+
     <RelativeLayout
         android:id="@+id/rlAcceptView"
         android:layout_width="30dp"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
-        android:visibility="gone"
-        android:background="#ff5b29">
+        android:background="#ff5b29"
+        android:visibility="gone">
 
-    <ImageView
-        android:layout_width="11dp"
-        android:layout_height="18dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/ic_left_swipe_arrow" />
+        <ImageView
+            android:layout_width="11dp"
+            android:layout_height="18dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_left_swipe_arrow" />
     </RelativeLayout>
+
     <ImageView
         android:id="@+id/ivFaded"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#99ffffff"/>
+        android:background="#99ffffff" />
 </FrameLayout>
