--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:splitMotionEvents="false"
     android:visibility="visible"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <Button
         android:id="@+id/driverInitialMyLocationBtn"
@@ -95,4 +95,17 @@
 
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvIntro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/grey_dark"
+        android:padding="5dp"
+        android:gravity="center"
+        android:text="@string/tap_for_tutorial"
+        android:textColor="@color/white"
+        android:tag="@string/dont_touch_me"
+        style="@style/TextNormal"
+        />
 </RelativeLayout>
